FIX: Uppdater tillåtna adresser